Add example of directives and unit testing them.

--- a/src/partials/test.html
+++ b/src/partials/test.html
@@ -1,3 +1,5 @@
 <div ng-controller="TestCtrl as test">
-	{{test.stuff}}
+	{{test.person}}
+	<test person="test.person" heading="{{test.person.name}}"
+	      do-stuff="test.doStuff()" />
 </div>
